Fixed visibility of contacts suggestion list

--- a/_modules_diff/modules/CoreWebclient/styles/themes/NetcoreNext/styles.less
+++ b/_modules_diff/modules/CoreWebclient/styles/themes/NetcoreNext/styles.less
@@ -742,6 +742,12 @@ li.address_capsule {
     z-index: 5000 !important;
 }
 
+.ui-autocomplete.ui-front {
+    z-index: 5001 !important;
+    transform: translate(0px, 5px);
+    border-radius: @_panel-border-radius;
+}
+
 .popup_panel,
 .popup_panel > .panel_wrap,
 .popup_panel > .panels,
